load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./.git/*",
    ],
    lint_mode = "fix",
)

cuda_library(
    name = "hello_kernel",
    srcs = ["hello_kernel.cu"],
    hdrs = ["hello_kernel.cuh"],
    includes = ["."],  # Makes the header available to dependent targets
)

cc_binary(
    name = "hello_main",
    srcs = ["hello_main.cc"],
    deps = [
        ":hello_kernel",
        "@absl//absl/status",
        "@absl//absl/strings:str_format",
        "@glog",
    ],
)
