bazel_dep(name = "buildifier_prebuilt", version = "7.1.2", dev_dependency = True)

bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "absl")
bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "rules_cuda", version = "0.2.5")

# This maybe a bloat
#cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "cuda")
#cuda.toolchain(
#    name = "local_cuda",
#    # Define compute capabilities appropriate for your target GPUs
#    compute_capabilities = [
#        "5.0",
#        "6.0",
#        "7.0",
#        "7.5",
#        "8.0",
#    ],
#    cuda_path = "/usr/local/cuda-12.8",
#)
#use_repo(cuda, "local_cuda")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "status_macros",
    strip_prefix = "status_macros-1.0.1",
    urls = ["https://github.com/bashtavenko/status_macros/archive/refs/tags/v1.0.1.tar.gz"],
)
